// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User Management Queries when the system user issuing the command is authorized when the user is a coscrad admin when querying for user groups when fetching a group by ID when there is a group with the given ID should find the group 1`] = `
Object {
  "actions": Array [],
  "data": Object {
    "description": "This group is for members of the community only.",
    "id": "1",
    "label": "community members",
    "users": Array [
      Object {
        "id": "1",
        "profile": Object {
          "email": "llcj1985@aol.com",
          "name": Object {
            "firstName": "James",
            "lastName": "Jones",
          },
        },
        "roles": Array [
          "viewer",
        ],
        "username": "cool-james",
      },
    ],
  },
}
`;

exports[`User Management Queries when the system user issuing the command is authorized when the user is a coscrad admin when querying for user groups when fetching all groups should return the expected result 1`] = `
Object {
  "actions": Array [],
  "data": Array [
    Object {
      "actions": Array [],
      "data": Object {
        "description": "This group is for members of the community only.",
        "id": "1",
        "label": "community members",
        "users": Array [
          Object {
            "id": "1",
            "profile": Object {
              "email": "llcj1985@aol.com",
              "name": Object {
                "firstName": "James",
                "lastName": "Jones",
              },
            },
            "roles": Array [
              "viewer",
            ],
            "username": "cool-james",
          },
        ],
      },
    },
  ],
}
`;

exports[`User Management Queries when the system user issuing the command is authorized when the user is a coscrad admin when querying for users when fetching a user by ID when there is a user with the given ID should find the user 1`] = `
Object {
  "actions": Array [],
  "data": Object {
    "id": "1",
    "profile": Object {
      "email": "llcj1985@aol.com",
      "name": Object {
        "firstName": "James",
        "lastName": "Jones",
      },
    },
    "roles": Array [
      "viewer",
    ],
    "username": "cool-james",
  },
}
`;

exports[`User Management Queries when the system user issuing the command is authorized when the user is a coscrad admin when querying for users when fetching all users should return the expected result 1`] = `
Object {
  "actions": Array [],
  "data": Array [
    Object {
      "actions": Array [],
      "data": Object {
        "id": "1",
        "profile": Object {
          "email": "llcj1985@aol.com",
          "name": Object {
            "firstName": "James",
            "lastName": "Jones",
          },
        },
        "roles": Array [
          "viewer",
        ],
        "username": "cool-james",
      },
    },
  ],
}
`;

exports[`User Management Queries when the system user issuing the command is authorized when the user is a project admin when querying for user groups when fetching a group by ID when there is a group with the given ID should find the group 1`] = `
Object {
  "actions": Array [],
  "data": Object {
    "description": "This group is for members of the community only.",
    "id": "1",
    "label": "community members",
    "users": Array [
      Object {
        "id": "1",
        "profile": Object {
          "email": "llcj1985@aol.com",
          "name": Object {
            "firstName": "James",
            "lastName": "Jones",
          },
        },
        "roles": Array [
          "viewer",
        ],
        "username": "cool-james",
      },
    ],
  },
}
`;

exports[`User Management Queries when the system user issuing the command is authorized when the user is a project admin when querying for user groups when fetching all groups should return the expected result 1`] = `
Object {
  "actions": Array [],
  "data": Array [
    Object {
      "actions": Array [],
      "data": Object {
        "description": "This group is for members of the community only.",
        "id": "1",
        "label": "community members",
        "users": Array [
          Object {
            "id": "1",
            "profile": Object {
              "email": "llcj1985@aol.com",
              "name": Object {
                "firstName": "James",
                "lastName": "Jones",
              },
            },
            "roles": Array [
              "viewer",
            ],
            "username": "cool-james",
          },
        ],
      },
    },
  ],
}
`;

exports[`User Management Queries when the system user issuing the command is authorized when the user is a project admin when querying for users when fetching a user by ID when there is a user with the given ID should find the user 1`] = `
Object {
  "actions": Array [],
  "data": Object {
    "id": "1",
    "profile": Object {
      "email": "llcj1985@aol.com",
      "name": Object {
        "firstName": "James",
        "lastName": "Jones",
      },
    },
    "roles": Array [
      "viewer",
    ],
    "username": "cool-james",
  },
}
`;

exports[`User Management Queries when the system user issuing the command is authorized when the user is a project admin when querying for users when fetching all users should return the expected result 1`] = `
Object {
  "actions": Array [],
  "data": Array [
    Object {
      "actions": Array [],
      "data": Object {
        "id": "1",
        "profile": Object {
          "email": "llcj1985@aol.com",
          "name": Object {
            "firstName": "James",
            "lastName": "Jones",
          },
        },
        "roles": Array [
          "viewer",
        ],
        "username": "cool-james",
      },
    },
  ],
}
`;
